# es-duck

./: .gitignore  Cargo.toml
scripts/: README.md  generate_testdata.sh  install_duckdb.sh  reset_clickhouse_local.sh  reset_postgres_local.sh  run_clickhouse_docker_test.sh  run_clickhouse_local_test.sh  run_postgres_docker_test.sh  run_postgres_local_test.sh  run_postgres_test.sh  sweep_clickhouse_parallelism.sh  sweep_duckdb_memory.sh  sweep_duckdb_parallelism.sh  sweep_postgres_memory.sh  sweep_postgres_parallelism.sh
src/: main.rs
tests/: clickhouse_integration_test.rs  duckdb_integration_test.rs  integration_test.rs  postgres_integration_test.rs
