[package]
name = "es-duck"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.4.3", features = ["bundled"] }
postgres = "0.19"
rand = "0.9"

[[bin]]
name = "load-duckdb"
path = "src/bin/load_duckdb.rs"

[[bin]]
name = "load-postgres"
path = "src/bin/load_postgres.rs"

[[bin]]
name = "sort-duckdb"
path = "src/bin/sort_duckdb.rs"

[[bin]]
name = "sort-postgres"
path = "src/bin/sort_postgres.rs"

[[bin]]
name = "generate-gensort"
path = "src/bin/generate_gensort.rs"

[dev-dependencies]
